[package]
name = "atomic_refcell"
version = "0.1.10"
authors = ["Bobby Holley <bobbyholley@gmail.com>"]
description = "Threadsafe RefCell"
license = "Apache-2.0/MIT"
repository = "https://github.com/bholley/atomic_refcell"
documentation = "https://docs.rs/atomic_refcell/"

[dependencies]
serde = { version = "1.0.171", optional = true }

[dev-dependencies]
serde_json = "1.0.104"

[features]
default = []
serde = ["dep:serde"]
